# blik

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2021-04-17-move-to-sqlite/: down.sql  up.sql
migrations/2021-06-04-track-mimetype/: down.sql  up.sql
res/: photos.css  photos.scss
src/: Rocket.toml  build.rs  collection.rs  dbopt.rs  fetch_places.rs  image.rs  main.rs  models.rs  myexif.rs  schema.rs  template_utils.rs  video.rs
src/adm/: findphotos.rs  makepublic.rs  migrate.rs  mod.rs  precache.rs  stats.rs  storestatics.rs  users.rs
src/server/: admin.rs  api.rs  autocomplete.rs  context.rs  image.rs  login.rs  media.rs  mod.rs  photolink.rs  search.rs  splitlist.rs  story.rs  timeline.rs  views_by_category.rs  views_by_date.rs
static/: index.css
static/raw/: layout_side_menu.js
static/sass/: photos.scss
templates/: base.rs.html  data_positions.rs.html  details.rs.html  head.rs.html  index.rs.html  invite.rs.html  login.rs.html  page_base.rs.html  person.rs.html  photo_link.rs.html  place.rs.html  search.rs.html  story.rs.html  tag.rs.html  timeline.rs.html
tera/: base.html.tera  head.html.tera  login.html.tera
