[package]
name = "blik"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>", "Rasmus Kaj <kaj@kth.se>"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.13", features = ["sass"] }

[dependencies]
chrono = "0.4" # Must match version used by diesel
dotenv = "0.15"
env_logger = "0.8"
image = "0.23"
kamadak-exif = "0.5"
log = "0.4"
mime = "0.3"
mime_guess = "2"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
structopt = { version = "0.3", features = ["wrap_help"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
anyhow = "1.0"
sha2 = "0.9"
rocket = "0.4"
rocket_contrib = { version = "0.4", features=["helmet", "diesel_sqlite_pool"] }
multipart = "0.17"
itertools = "0.10.0"
base64 = "0.13.0"
diesel_migrations = "1.4" # We use this to bundle the migrations with the binary
webbrowser = "0.5"
ac-ffmpeg = "0.17.0"

[dependencies.diesel]
default-features = false
features = ["r2d2", "chrono", "sqlite"]
version = "1.4"